fix dark mode select backgrounds in firefox

--- a/src/fe/components/controls/select.less
+++ b/src/fe/components/controls/select.less
@@ -7,6 +7,13 @@
     border-radius: 4px;
     white-space: nowrap;
 
+    @media (prefers-color-scheme: dark) {
+        // fix background in firefox
+        option {
+            background: @card-background;
+        }
+    }
+
     & > select, & > .multi-select {
         display: inline-block;
         background: none;
